src/objects/Conga_Header_Footer__c.object
<CustomObject>
    <description>It stores header and footer data</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>7 OClock</fullName>
                </value>
                <value>
                    <fullName>Ajax</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Amosan</fullName>
                </value>
                <value>
                    <fullName>Ariel</fullName>
                </value>
                <value>
                    <fullName>Bellady</fullName>
                </value>
                <value>
                    <fullName>Blue II</fullName>
                </value>
                <value>
                    <fullName>Bounty</fullName>
                </value>
                <value>
                    <fullName>Braun</fullName>
                </value>
                <value>
                    <fullName>Camay</fullName>
                </value>
                <value>
                    <fullName>Charmin</fullName>
                </value>
                <value>
                    <fullName>Color Up</fullName>
                </value>
                <value>
                    <fullName>Contour</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>Crest</fullName>
                </value>
                <value>
                    <fullName>Custom Plus</fullName>
                </value>
                <value>
                    <fullName>Daisy</fullName>
                </value>
                <value>
                    <fullName>DAISY（女用）</fullName>
                </value>
                <value>
                    <fullName>Dawn</fullName>
                </value>
                <value>
                    <fullName>Decore</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Dinamo-Dynamo</fullName>
                </value>
                <value>
                    <fullName>Downy</fullName>
                </value>
                <value>
                    <fullName>Duracell</fullName>
                </value>
                <value>
                    <fullName>Duracell Activair</fullName>
                </value>
                <value>
                    <fullName>Duracell PowerPix</fullName>
                </value>
                <value>
                    <fullName>Duracell Procell</fullName>
                </value>
                <value>
                    <fullName>Duracell Ultra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Austria-PGP</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belgium-PGP</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Repubic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>France-PGP</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Germany-PGP</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Greece-PGP</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Ireland-PGP</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Italy-PGP</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English - UK</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Graphic_ID__c</fullName>
        <label>Logo Graphic ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Graphic_URL__c</fullName>
        <formula>if ( Logo_Graphic_ID__c =&quot;&quot;, &quot;&quot;, &quot;https://na5.salesforce.com/servlet/servlet.FileDownload?file=&quot; + Logo_Graphic_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo Graphic URL</label>
        <type>Text</type>
    </fields>
    <label>Conga Header Footer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Brand__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CHF-{0000}</displayFormat>
        <label>Conga Header Footer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Header Footer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>